; ModuleID = '/home/carl/AnghaBench/mpv/video/out/placebo/extr_ra_pl.c_buf_update_pl.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/placebo/extr_ra_pl.c_buf_update_pl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra = type { i32 }
%struct.ra_buf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ra*, %struct.ra_buf*, i32, i8*, i64)* @buf_update_pl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @buf_update_pl(%struct.ra* %0, %struct.ra_buf* %1, i32 %2, i8* %3, i64 %4) #0 {
  %6 = alloca %struct.ra*, align 8
  %7 = alloca %struct.ra_buf*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store %struct.ra* %0, %struct.ra** %6, align 8
  store %struct.ra_buf* %1, %struct.ra_buf** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load %struct.ra*, %struct.ra** %6, align 8
  %12 = call i32 @get_gpu(%struct.ra* %11)
  %13 = load %struct.ra_buf*, %struct.ra_buf** %7, align 8
  %14 = getelementptr inbounds %struct.ra_buf, %struct.ra_buf* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i8*, i8** %9, align 8
  %18 = load i64, i64* %10, align 8
  %19 = call i32 @pl_buf_write(i32 %12, i32 %15, i32 %16, i8* %17, i64 %18)
  ret void
}

declare dso_local i32 @pl_buf_write(i32, i32, i32, i8*, i64) #1

declare dso_local i32 @get_gpu(%struct.ra*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
